--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-string": "^1.2.3"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "@tarik-leviathan/ltds": "^0.1.6",
     "node-fetch": "^3.3.2",
     "tippy.js": "^6.3.7",
