--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@splidejs/splide": "^4.1.4",
     "@tarik-leviathan/ltds": "^0.4.0",
     "node-fetch": "^3.3.2",
+    "three": "^0.179.1",
     "tippy.js": "^6.3.7",
     "universal-router": "^9.2.1"
   }
